--- a/Pod_retriever/pod2.yaml
+++ b/Pod_retriever/pod2.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: python-pods
+  name: retrieverpod
 spec:
   containers:
     - name: python-container
-      image: edysontan/pyth
+      image: edysontan/inference
       volumeMounts:
         - mountPath: /mnt/data  # Path inside the container
           name: my-data-volume
