--- a/Pod_writer/pv.yaml
+++ b/Pod_writer/pv.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: my-pv
+  name: store-model-vol
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/data"  # Directory on the Kubernetes node
+    path: "/mnt"  # Directory on the Kubernetes node
