--- a/Pod_writer/pvc.yaml
+++ b/Pod_writer/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: my-pvc
+  name: store-model-pvc
 spec:
   accessModes:
     - ReadWriteOnce
