--- a/Pod_retriever/Dockerfile
+++ b/Pod_retriever/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a base image
-FROM python:3.8-slim
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,11 +7,13 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Copy the contents of the toinput folder into /mnt/newdata inside the container
-COPY Toinput /mnt/newdata
+# Install TensorFlow or Keras, or any other dependencies needed for model saving
 
 # If you have dependencies in a requirements.txt file, uncomment the next line
-# RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install tensorflow keras
+
 
 # Run your Python script
 CMD ["python", "retrieve.py"]
