Updated trainmodel.py and added saved_model folder to save the trained model into it

--- a/Model_Training/pod.yaml
+++ b/Model_Training/pod.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: trainerpod
+  name: model-training-pod
+  labels:
+      app: model-training
 spec:
   containers:
     - name: python-container
