Added pv.yaml and pvc.yaml file. Updated traainmodel.py and pod.yaml

--- a/Model_Training/train-config.yaml
+++ b/Model_Training/train-config.yaml
@@ -3,5 +3,4 @@ kind: ConfigMap
 metadata:
   name: train-config
 data:
-  DATA_PATH: "/mnt/data/training_data.csv"
-  MODEL_SAVE_PATH: "/mnt/models/my_model.h5"
+  MODEL_SAVE_PATH: "/mnt/model_training/saved_model/trained_model"
