--- a/Model_Training/pod.yaml
+++ b/Model_Training/pod.yaml
@@ -2,21 +2,23 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: model-training-pod
-  labels:
-      app: model-training
 spec:
   containers:
-    - name: python-container
-      image: model_trainer:latest
-      volumeMounts:
-        - mountPath: /mnt/data
-          name: data-volume
-        - mountPath: /mnt/models
-          name: model-volume
+  - name: model-training-container
+    image: yourdockerhubusername/model-trainer:latest
+    command: ["python", "train.py"]
+    volumeMounts:
+    - mountPath: /mnt/data
+      name: model-training-volume
+    - mountPath: /mnt/model_training/saved_model
+      name: model-output-volume
+    env:
+    - name: MODEL_SAVE_PATH
+      value: "/mnt/model_training/saved_model/trained_model"
   volumes:
-    - name: data-volume
-      persistentVolumeClaim:
-        claimName: data-pvc
-    - name: model-volume
-      persistentVolumeClaim:
-        claimName: model-pvc
+  - name: model-training-volume
+    persistentVolumeClaim:
+      claimName: model-training-pvc
+  - name: model-output-volume
+    persistentVolumeClaim:
+      claimName: model-output-pvc
