--- a/Model_Training/DockerFile
+++ b/Model_Training/DockerFile
@@ -7,7 +7,7 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any dependencies needed for model training
+# # Install any dependencies needed for model training
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
