--- a/jurnjie/Dockerfile
+++ b/jurnjie/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python base image
-FROM python:3.9-slim
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,8 +7,12 @@ WORKDIR /app
 # Copy the requirements file into the container
 COPY requirements.txt .
 
+RUN pip install --upgrade pip
 # Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+
+# RUN pip install keras tensorflow pillow numpy
 
 COPY data_309 /mnt/data
 
