--- a/Edyson/deployment.yaml
+++ b/Edyson/deployment.yaml
@@ -1,4 +1,6 @@
 # Define the Namespace
+
+# To seperate resource within cluster
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -7,6 +9,9 @@ metadata:
 ---
 
 # Configmap
+
+# Store non-confidential data
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -21,6 +26,12 @@ data:
 ---
 
 # Service
+
+# Service accessible from within the cluster (ClusterIP) and will sent traffic to pods
+# it manages (recieves on 80 sent to containers at 8083)
+# Does not deploy or manage pods just route traffic
+# If can control >1 pod it will auto route traffic to them
+
 apiVersion: v1  # Specifies the API version to use for the Service object
 kind: Service   # Defines this as a Service object
 metadata:
@@ -38,6 +49,9 @@ spec:
 ---
 
 # PVC
+
+# To allow request of a storage, request 4 Gi
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -53,21 +67,31 @@ spec:
 ---
 
 # Inference Deployment
-apiVersion: apps/v1  # Specifies the API version to use for the Deployment object
-kind: Deployment     # Defines this as a Deployment object
+
+# Deployment use template to how pod shld be created
+# Replicaset controller created from deployment and it ensure pod is at desired state
+# and will mintor and if not it delete, create and manage pods
+
+
+apiVersion: apps/v1 
+kind: Deployment   
 metadata:
-  name: inference    # The name of the Deployment
+  name: inference    # Name of Deployment
   namespace: ml-app  # The namespace in which the Deployment is created
 spec:
   replicas: 1        # Number of pod replicas that should be running at all times
+  revisionHistoryLimit: 8  # Retain the last 8 ReplicaSets for rollback (decreased from default) ensuring enough versions are kept for rollback without bloating
+  minReadySeconds: 15 # Giving 15 seconds buffer time for pod to stabilize after being ready before being able to recieve traffic (Means pod marked as ready need state read for 15 seconds before being considered available to recieve traffic)
+  progressDeadlineSeconds: 600  # 10 minutes to complete the update or considered as failed
   selector:
     matchLabels:
-      app: inference # The label that this Deployment uses to manage the pods it creates
+      app: inference # Label Deployment uses to manage the pods it creates
   strategy:
     type: RollingUpdate  # Deployment strategy; RollingUpdate updates the pods in a rolling fashion
     rollingUpdate:
       maxUnavailable: 1  # During an update, at most 1 pod can be unavailable at a time
       maxSurge: 1        # During an update, at most 1 extra pod can be created temporarily
+      # Matching maxunavailale and maxsurge ensures stradyrollout with no reduction in total available pods
   template:
     metadata:
       name: inference-pod
@@ -79,11 +103,11 @@ spec:
         - name: inference-container
           image: edysontan/inference
           ports:
-            - containerPort: 8083              # Port that the container listens on
+            - containerPort: 8083        # Port that the container listens on
           volumeMounts:
-            - mountPath: /mnt  # Path inside the container
+            - mountPath: /mnt  # Path inside container colume mounted at
               name: store-model-volume
-          env:
+          env: # environment variables for container to use
             - name: DATA_PATH
               valueFrom:
                 configMapKeyRef:
@@ -99,7 +123,7 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: VOLUME_MOUNT_PATH
-      volumes:
+      volumes: # Associate store-model-volume to store-model-pvc and volumemount mounts this associated volume to /mnt
         - name: store-model-volume
           persistentVolumeClaim:
             claimName: store-model-pvc
