--- a/minzheng/deployment.yml
+++ b/minzheng/deployment.yml
@@ -15,7 +15,7 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: flask-app
+      chapter: flask
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -24,11 +24,11 @@ spec:
   template:
     metadata:
       labels:
-        app: flask-app
+        chapter: flask
     spec:
       containers:
       - name: flask-container
-        image: wacktack/flask-app
+        image: wacktack/flask-app:latest
         ports:
         - containerPort: 5000 # set port 5000
 
@@ -38,14 +38,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-app-service
+  namespace: ml-app
+  labels:
+    chapter: flask
 spec:
-  selector:
-    app: flask-app
+  type: NodePort  # LoadBalancer for external
   ports:
-    - protocol: TCP
-      port: 80  # External port
-      targetPort: 5000  # Flask app port inside the container
-  type: LoadBalancer  # LoadBalancer for external
+  - protocol: TCP
+    port: 5000  # External port
+    targetPort: 5000  # Flask app port inside the container
+    nodePort: 30005
+  selector:
+    chapter: flask
 
 ---
 # Data Processing Deployment
