--- a/jurnjie/pv_pvc.yaml
+++ b/jurnjie/pv_pvc.yaml
@@ -8,13 +8,38 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/mnt/data_309"
+    path: "/app/data_309"
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 4Gi
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: shared-data-pv
+spec:
+  capacity:
+    storage: 4Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/app/data_309"
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: shared-data-pvc
 spec:
   accessModes:
     - ReadWriteMany
