--- a/haijie/pv.yaml
+++ b/haijie/pv.yaml
@@ -1,23 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: model-training-pv
+  name: processed-data-pv
 spec:
   capacity:
-    storage: 5Gi  # Adjust the size as needed
+    storage: 4Gi
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/mnt/data"  # Path on the host machine
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: model-output-pv
-spec:
-  capacity:
-    storage: 5Gi  # Adjust the size as needed
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/mnt/model_output"  # Path on the host machine
+    path: "/app/data_309"  # This path should correspond to the location where jurnjie writes data
