--- a/haijie/pvc.yaml
+++ b/haijie/pvc.yaml
@@ -8,3 +8,14 @@ spec:
   resources:
     requests:
       storage: 4Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: saved-model-pvc  # Name of the PVC for the saved model
+spec:
+  accessModes:
+    - ReadWriteMany  # Must match the PV's access mode
+  resources:
+    requests:
+      storage: 4Gi  # Should match or be less than the PV's capacity
