--- a/haijie/pv.yaml
+++ b/haijie/pv.yaml
@@ -1,11 +1,23 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: processed-data-pv
+  name: processed-data-pv  # Name of the Persistent Volume for processed data
 spec:
   capacity:
-    storage: 4Gi
+    storage: 4Gi  # Adjust size based on your needs
   accessModes:
-    - ReadWriteMany
+    - ReadWriteMany  # Allows multiple Pods to read/write
   hostPath:
-    path: "/app/data_309"  # This path should correspond to the location where jurnjie writes data
+    path: "/app/data_309"  # Path on the host machine where the processed data is stored
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: saved-model-pv  # Name of the Persistent Volume for the saved model
+spec:
+  capacity:
+    storage: 4Gi  # Adjust size based on your needs
+  accessModes:
+    - ReadWriteMany  # Allows multiple Pods to read/write
+  hostPath:
+    path: "/mnt/saved_model"  # Path on the host machine where the model will be saved
