--- a/haijie/pvc.yaml
+++ b/haijie/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: processed-data-pvc
+  namespace: ml-app
 spec:
   accessModes:
     - ReadWriteMany
@@ -13,6 +14,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: saved-model-pvc  # Name of the PVC for the saved model
+  namespace: ml-app
 spec:
   accessModes:
     - ReadWriteMany  # Must match the PV's access mode
