--- a/haijie/deployment.yml
+++ b/haijie/deployment.yml
@@ -1,65 +1,46 @@
-###############################
-########## NameSpace ##########
-###############################
 apiVersion: v1
 kind: Namespace
 metadata:
   name: ml-app
 ---
-
-########################################
-########## Model Training Pod ##########
-########################################
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: model-training-pod
+  name: model-training-deployment
   namespace: ml-app
 spec:
-  containers:
-  - name: data-processing
-    image: jurnjie/data-processing:latest
-    volumeMounts:
-    - mountPath: "/app/data_309"
-      name: processed-data-volume
+  replicas: 3  # Number of pod replicas
+  selector:
+    matchLabels:
+      app: model-training
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
+  template:
+    metadata:
+      labels:
+        app: model-training
+    spec:
+      containers:
+      - name: model-training # model training code
+        image: 200iqkid/model-training:latest # hai jie's image
+        volumeMounts:
+        - mountPath: "/app/data_309"  # to modify
+          name: processed-data-volume
+        - mountPath: '/mnt/saved_model'  # to modify
+          name: saved-model-volume
 
-  - name: model-training
-    image: 200iqkid/model-training:latest
-    volumeMounts:
-    - mountPath: "/app/data_309"  
-      name: processed-data-volume
-    - mountPath: '/mnt/saved_model' 
-      name: saved-model-volume
+      volumes:
+      - name: processed-data-volume # jurn jie's volume claim
+        persistentVolumeClaim:
+          claimName: processed-data-pvc
+      - name: saved-model-volume # hai jie'svolume claim
+        persistentVolumeClaim:
+          claimName: saved-model-pvc
 
-  volumes:
-  - name: processed-data-volume
-    persistentVolumeClaim:
-      claimName: processed-data-pvc
-  - name: saved-model-volume
-    persistentVolumeClaim:
-      claimName: saved-model-pvc
 ---
-
-#######################################
-########## Persistent Volume ##########
-#######################################
-
-# PV for processed data
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: processed-data-pv  # Name of the Persistent Volume for processed data
-  namespace: ml-app
-spec:
-  capacity:
-    storage: 4Gi  
-  accessModes:
-    - ReadWriteMany  
-  hostPath:
-    path: "/mnt/processed_data"  # Path on the host machine where the processed data is stored
-  persistentVolumeReclaimPolicy: Retain
----
-
 # PV for saved model
 apiVersion: v1
 kind: PersistentVolume
@@ -74,12 +55,8 @@ spec:
   hostPath:
     path: "/mnt/saved_model"  # Path on the host machine where the model will be saved
   persistentVolumeReclaimPolicy: Retain
+
 ---
-
-#############################################
-########## Persistent Volume Claim ##########
-#############################################
-
 # PVC for processed data
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -92,8 +69,8 @@ spec:
   resources:
     requests:
       storage: 4Gi
----
 
+---
 # PVC for saved model
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -107,5 +84,17 @@ spec:
     requests:
       storage: 4Gi  
 
-
-
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: model-training-service 
+  namespace: ml-app
+spec:
+  selector:
+    app: inference         # Labels used to identify the pods this Service targets
+  ports:
+  - protocol: TCP          # The protocol for the port (usually TCP)
+    port: 80               # The port that the Service exposes to the outside world
+    targetPort: 8082       # The port on the pod/container that the Service forwards traffic to
+  type: ClusterIP          # The type of Service; ClusterIP means it's accessible only within the cluster
