integration envionment experiment:v2

--- a/minzheng/deploy.yml
+++ b/minzheng/deploy.yml
@@ -12,9 +12,9 @@ metadata:
   name: flask-url
   namespace: ml-app
 data:
-  DP_POD_URL: "http://processing-service/start-processing"
+  DP_POD_URL: "http://processing-service:84/start-processing"
   MODEL_TRAINING_URL: "http://inference-pod/get-model-info"
-  INF_POD_URL: "http://inference-service/predict"
+  INF_POD_URL: "http://inference-service:83/predict"
 
 ---
 # Flask App Deployment
