--- a/haijie/deployment.yml
+++ b/haijie/deployment.yml
@@ -75,13 +75,13 @@ spec:
 apiVersion: v1 
 kind: Service 
 metadata:
-  name: model-training-service  # http://model-training-service/train **
+  name: model-training-service  
   namespace: ml-app
 spec:
   selector:
     app: model-training         # Labels used to identify the pods this Service targets
   ports:
   - protocol: TCP          # The protocol for the port (usually TCP)
-    port: 82               # The port that the Service exposes to the outside world
-    targetPort: 8082       # The port on the pod/container that the Service forwards traffic to
+    port: 85               # The port that the Service exposes to the outside world
+    targetPort: 8085       # The port on the pod/container that the Service forwards traffic to
   type: ClusterIP          # The type of Service; ClusterIP means it's accessible only within the cluster
