--- a/deployment.yml
+++ b/deployment.yml
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
       - name: flask-container
-        image: edysontan/flask-app:latest # pull from flask-app image
+        image: wacktack/flask-app:latest # pull from flask-app image
         env: # to get Config map variables
         - name: DP_POD_URL
           valueFrom:
@@ -209,44 +209,14 @@ spec:
           persistentVolumeClaim:
             claimName: store-model-pvc
 ---
-
-
-# Data Processing Deployment
+### Hai jie
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: data-processing
+  name: model-training-deployment
   namespace: ml-app
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: data-processing
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: data-processing
-    spec:
-      containers:
-      - name: data-processing-container
-        image: your-data-processing-image:latest
-        ports:
-        - containerPort: 8080
-
----
-# Model Training Deployment
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: model-training
-  namespace: ml-app
-spec:
-  replicas: 3
+  replicas: 1  # Number of pod replicas
   selector:
     matchLabels:
       app: model-training
@@ -261,83 +231,159 @@ spec:
         app: model-training
     spec:
       containers:
-      - name: model-training-container
-        image: your-model-training-image:latest
-        ports:
-        - containerPort: 8081
+      - name: model-training # model training code
+        image: 200iqkid/modeltrain # hai jie's image
+        volumeMounts:
+        - mountPath: "/app/data"  # to modify
+          name: processed-data-pv
+        - mountPath: '/mnt/saved_model'  # to modify
+          name: saved-model-volume
+
+      volumes:
+      - name: processed-data-pv # jurn jie's volume claim
+        persistentVolumeClaim:
+          claimName: processed-data-pvc
+      - name: saved-model-volume # hai jie'svolume claim
+        persistentVolumeClaim:
+          claimName: saved-model-pvc
 
 ---
-# Inference Deployment
-apiVersion: apps/v1
-kind: Deployment
+# PV for saved model
+apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: inference
+  name: saved-model-pv  # Name of the Persistent Volume for the saved model
   namespace: ml-app
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: inference
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: inference
-    spec:
-      containers:
-      - name: inference-container
-        image: your-inference-image:latest
-        ports:
-        - containerPort: 8082
+  capacity:
+    storage: 4Gi  
+  accessModes:
+    - ReadWriteMany  
+  hostPath:
+    path: "/mnt/saved_model"  # Path on the host machine where the model will be saved
+  persistentVolumeReclaimPolicy: Retain
+
 
 ---
-# Example Service for Data Processing
+# PVC for saved model
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: saved-model-pvc  # Name of the PVC that will request the saved model volume
+  namespace: ml-app  
+spec:
+  accessModes:
+    - ReadWriteOnce  
+  resources:
+    requests:
+      storage: 4Gi  
+
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: model-training-service  
+  namespace: ml-app
+spec:
+  selector:
+    app: model-training         # Labels used to identify the pods this Service targets
+  ports:
+  - protocol: TCP          # The protocol for the port (usually TCP)
+    port: 85               # The port that the Service exposes to the outside world
+    targetPort: 8085       # The port on the pod/container that the Service forwards traffic to
+  type: ClusterIP          # The type of Service; ClusterIP means it's accessible only within the cluster
+
+---
+### Jurn Jie
+# Service
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-processing-service
+  name: processing-service
   namespace: ml-app
 spec:
   selector:
     app: data-processing
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 8080
+    port: 84
+    targetPort: 8084
   type: ClusterIP
 
 ---
-# Example Service for Model Training
+
+# PV
+# allow request of storage
+
 apiVersion: v1
-kind: Service
+kind: PersistentVolume
 metadata:
-  name: model-training-service
+  name: processed-data-pv
+spec:
+  capacity:
+    storage: 4Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/mnt/data"
+---
+
+# PVC 
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: processed-data-pvc
   namespace: ml-app
 spec:
-  selector:
-    app: model-training
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8081
-  type: ClusterIP
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 4Gi
 
 ---
-# Example Service for Inference
-apiVersion: v1
-kind: Service
+
+# Deployment 
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: inference-service
+  name: data-processing-deployment
   namespace: ml-app
+  labels:
+    app: data-processing
 spec:
+  replicas: 3
   selector:
-    app: inference
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8082
-  type: ClusterIP
+    matchLabels:
+      app: data-processing
+  template:
+    metadata:
+      labels:
+        app: data-processing
+    spec:
+      containers:
+      - name: data-processing-container
+        image: 200iqkid/data-processing:latest
+        volumeMounts:
+        - mountPath: "/app/processed_data"
+          name: processed-data-pv
+        env:
+        - name: TRAIN_DIR
+          value: "/app/data_309/train"
+        - name: TEST_DIR
+          value: "/app/data_309/test"
+      # Connecting PVC to PV
+      volumes:
+      - name: processed-data-pv
+        persistentVolumeClaim:
+          claimName: processed-data-pvc
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  revisionHistoryLimit: 10  # Keep a history of 10 revisions for rollback
+  minReadySeconds: 5  # Minimum time a Pod should be ready before considered stable
+  progressDeadlineSeconds: 600  # Deadline for progressing the deployment   
