--- a/minzheng/deploy.yml
+++ b/minzheng/deploy.yml
@@ -41,7 +41,7 @@ spec:
     spec:
       containers:
       - name: flask-container
-        image: wacktack/flask-app # pull from flask-app image
+        image: edysontan/flask-app # pull from flask-app image
         env: # to get Config map variables
         - name: DP_POD_URL
           valueFrom:
